--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -12,19 +12,18 @@
     padding-left: 20rpx;
     padding-right: 20rpx;
     box-sizing: border-box;
-  }
-  
-  /* 左侧 logo */
-  .nav-img {
-    width: 100rpx;
-    height: 40rpx;
-  }
-  
-  
+}
+
+/* 左侧 logo */
+.nav-img {
+    width: 82rpx;
+    height: 34rpx;
+}
 
 /* 搜索框容器（半透明 + 缩短宽度） */
 .search-box {
-    width: 50%; /* ✅ 控制搜索框长度，改这里就能缩短 */
+    width: 50%;
+    /* ✅ 控制搜索框长度，改这里就能缩短 */
     height: 60rpx;
     margin-left: 20rpx;
     display: flex;
@@ -33,23 +32,11 @@
     border-radius: 30rpx;
     padding: 0 20rpx;
     box-sizing: border-box;
-  }
-  
-
-
-/* 悠然旅途首页样式 */
-
-.index-container {
-    padding-bottom: 100rpx;
-    /* background-color: #f7f7f7; */
 }
-
-
-
 
 /* 轮播图样式  */
 .swiper {
-    height: 400rpx;
+    height: 490rpx;
     position: relative;
     border-radius: 0 0 16rpx 16rpx;
     overflow: hidden;
@@ -62,268 +49,57 @@
     height: 100%;
 }
 
-.swiper-content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 30rpx;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.7));
-    color: white;
-}
-
-.swiper-title {
-    font-size: 36rpx;
-    font-weight: bold;
-    display: block;
-    margin-bottom: 10rpx;
-}
-
-.swiper-desc {
-    font-size: 26rpx;
-    opacity: 0.9;
-}
-
-.house-background {
-  /* background-image: url('http://121.37.136.16:8080/house-background.png'); */
-  /* background-color: rgb(252, 234, 217); */
-  background: linear-gradient(to bottom, rgb(252,234,217), #ffffff);
-  /* background-size: 100% 100%;         
-  background-repeat: no-repeat;
-  background-position: center;    
-  position: relative;            
-  margin-top: -170rpx;             
-  z-index: 5;                     
-  padding-top: 170rpx;              */
-}
 
 
 /* 品牌介绍区域 */
 .brand-intro {
-    padding: 30rpx;
-    /* margin: 20rpx 0; */
-    border-radius: 16rpx;
-    
-}
-
-.section-title {
-    font-size: 32rpx;
-    font-weight: bold;
-    margin-bottom: 30rpx;
+    width: 375px;
+    height: 230px;
+    background-image: url('http://121.37.136.16:8080/wuyan.png');
+    background-repeat: no-repeat;
     position: relative;
-    padding-left: 20rpx;
-    color: #333;
-}
-
-.section-title::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 5rpx;
-    height: 30rpx;
-    width: 8rpx;
-    background: linear-gradient(135deg, #4e54c8, #8f94fb);
-    border-radius: 4rpx;
+    margin-top: -74rpx;
+    z-index: 1;
+    padding-top: 74rpx;
 }
 
 .brand-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30rpx;
-}
-
-.brand-item {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: all 0.3s;
-}
-
-.brand-item:active {
-    transform: scale(0.95);
-    opacity: 0.8;
-}
-
-.brand-item image {
-    width: 120rpx;
-    height: 140rpx;
-    margin-bottom: 15rpx;
-    /* padding: 15rpx; */
-}
-
-
-/* 热卖推荐区域 */
-.hot-sales {
-    padding: 30rpx;
-    background: white;
-    margin-bottom: 20rpx;
-    border-radius: 16rpx;
-}
-
-.product-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20rpx;
-}
-
-.product-card {
-    background: white;
-    border-radius: 16rpx;
-    overflow: hidden;
-    box-shadow: 0 4rpx 20rpx rgba(0, 0, 0, 0.06);
-    transition: all 0.3s;
-}
-
-.product-card:active {
-    transform: translateY(5rpx);
-    box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.04);
-}
-
-.product-image {
-    width: 100%;
-    height: 240rpx;
-    position: relative;
-}
-
-.product-tag {
-    position: absolute;
-    top: 15rpx;
-    right: 15rpx;
-    background: #ff5252;
-    color: white;
-    font-size: 20rpx;
-    padding: 6rpx 16rpx;
-    border-radius: 20rpx;
-}
-
-.product-info {
+    flex-wrap: wrap;
+    /* 自动换行 */
+    justify-content: space-between;
+    /* 每行等间距 */
     padding: 20rpx;
 }
 
-.product-title {
-    font-size: 28rpx;
-    font-weight: 500;
-    margin-bottom: 15rpx;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    min-height: 80rpx;
-    color: #333;
-}
-
-.product-price {
-    color: #ff6b6b;
-    font-weight: bold;
-    font-size: 32rpx;
-}
-
-.original-price {
-    font-size: 24rpx;
-    color: #999;
-    text-decoration: line-through;
-    margin-left: 10rpx;
-}
-
-/* 更多推荐区域 */
-.more-recommend {
-    padding: 30rpx;
-    background: white;
-    border-radius: 16rpx;
-}
-
-.more-recommend .product-grid {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-/* 响应式适配 */
-@media (max-width: 480px) {
-    .brand-grid {
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20rpx;
-    }
-
-    .product-grid {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15rpx;
-    }
-
-    .brand-item image {
-        width: 70rpx;
-        height: 70rpx;
-    }
-
-    .brand-item text {
-        font-size: 22rpx;
-    }
-}
-
-/* 动画效果 */
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(20rpx);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.product-card {
-    animation: fadeIn 0.5s ease forwards;
-}
-
-.product-card:nth-child(1) {
-    animation-delay: 0.1s;
-}
-
-.product-card:nth-child(2) {
-    animation-delay: 0.2s;
-}
-
-.product-card:nth-child(3) {
-    animation-delay: 0.3s;
-}
-
-.product-card:nth-child(4) {
-    animation-delay: 0.4s;
-}
-
-.product-card:nth-child(5) {
-    animation-delay: 0.5s;
-}
-
-.product-card:nth-child(6) {
-    animation-delay: 0.6s;
-}
-
 .brand-item {
-    animation: fadeIn 0.5s ease forwards;
+    width: 30%;
+    /* 每行 3 个 */
+    margin-bottom: 30rpx;
+    /* 行间距 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.brand-item:nth-child(1) {
-    animation-delay: 0.1s;
+.brand-item image {
+    width: 132rpx;
+    height: 166rpx;
 }
 
-.brand-item:nth-child(2) {
-    animation-delay: 0.2s;
+.content{
+    width: 85%;
+    height: 900rpx;
+    margin: 0 auto;
+    /* background-color: pink; */
 }
-
-.brand-item:nth-child(3) {
-    animation-delay: 0.3s;
+.brand-title image{
+    width: 100%;
+    height: 110rpx;
+    margin-bottom: 36rpx;
 }
-
-.brand-item:nth-child(4) {
-    animation-delay: 0.4s;
-}
-
-.brand-item:nth-child(5) {
-    animation-delay: 0.5s;
-}
-
-.brand-item:nth-child(6) {
-    animation-delay: 0.6s;
+.hot image{
+    width: 100%;
+    height: 195rpx;
+    margin-bottom: 10rpx;
 }
