--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,59 +1,99 @@
 <view class="nav-bar" style="height: {{navBarHeight}}px; padding-top: {{statusBarHeight}}px;">
-    <image src="http://121.37.136.16:8080/logo.png" class="nav-img"></image>
-    <view class="search-box">
-        <input class="search-input" placeholder="搜索..." placeholder-class="placeholder" />
-    </view>
+  <image src="http://121.37.136.16:8080/logo.png" class="nav-img"></image>
+  <view class="search-box">
+    <input class="search-input" placeholder="搜索..." placeholder-class="placeholder" />
+  </view>
 </view>
 
 
 
 <!-- 轮播图 -->
 <swiper class="swiper" indicator-dots="{{true}}" autoplay="{{true}}" interval="{{3000}}">
-    <swiper-item>
-        <image src="http://121.37.136.16:8080/images/swiper/swiper-1.png" mode="aspectFill"></image>
-    </swiper-item>
-    <swiper-item>
-        <image src="http://121.37.136.16:8080/images/swiper/swiper-1.png" mode="aspectFill"></image>
-    </swiper-item>
-    <swiper-item>
-        <image src="http://121.37.136.16:8080/images/swiper/swiper-1.png" mode="aspectFill"></image>
-    </swiper-item>
+  <swiper-item>
+    <image src="http://121.37.136.16:8080/images/swiper/swiper-1.png" mode="aspectFill"></image>
+  </swiper-item>
+  <swiper-item>
+    <image src="http://121.37.136.16:8080/images/swiper/swiper-1.png" mode="aspectFill"></image>
+  </swiper-item>
+  <swiper-item>
+    <image src="http://121.37.136.16:8080/images/swiper/swiper-1.png" mode="aspectFill"></image>
+  </swiper-item>
 </swiper>
-
+<!-- 品牌图标 -->
 <view class="brand-intro">
-    <view class="brand-grid">
-        <view class="brand-item">
-            <image src="http://121.37.136.16:8080/1.png"></image>
-        </view>
-        <view class="brand-item">
-            <image src="http://121.37.136.16:8080/2.png"></image>
-        </view>
-        <view class="brand-item">
-            <image src="http://121.37.136.16:8080/3.png"></image>
-        </view>
-        <view class="brand-item">
-            <image src="http://121.37.136.16:8080/4.png"></image>
-        </view>
-        <view class="brand-item">
-            <image src="http://121.37.136.16:8080/5.png"></image>
-        </view>
-        <view class="brand-item">
-            <image src="http://121.37.136.16:8080/6.png"></image>
-        </view>
+  <view class="brand-grid">
+    <view class="brand-item">
+      <image src="http://121.37.136.16:8080/1.png"></image>
     </view>
+    <view class="brand-item">
+      <image src="http://121.37.136.16:8080/2.png"></image>
+    </view>
+    <view class="brand-item">
+      <image src="http://121.37.136.16:8080/3.png"></image>
+    </view>
+    <view class="brand-item">
+      <image src="http://121.37.136.16:8080/4.png"></image>
+    </view>
+    <view class="brand-item">
+      <image src="http://121.37.136.16:8080/5.png"></image>
+    </view>
+    <view class="brand-item">
+      <image src="http://121.37.136.16:8080/6.png"></image>
+    </view>
+  </view>
+</view>
+<!-- 热点介绍 -->
+<view class="content">
+  <view class="brand-title">
+    <image src="http://121.37.136.16:8080/brand-intro.png"></image>
+  </view>
+  <view class="hot">
+    <image src="http://121.37.136.16:8080/food-hot.png"></image>
+  </view>
+  <view class="hot">
+    <image src="http://121.37.136.16:8080/life-hot.png"></image>
+  </view>
+  <view class="hot">
+    <image src="http://121.37.136.16:8080/selection-hot.png"></image>
+  </view>
 </view>
 
-<view class="content">
-    <view class="brand-title">
-            <image src="http://121.37.136.16:8080/brand-intro.png"></image>
+<!-- 更多旅游推荐 - more -->
+<view class="hot-travel">
+  <view class="section-header">
+    <view class="section-title">更多推荐-旅游</view>
+    <view class="sub-title">更多</view>
+  </view>
+  <view class="product-grid">
+
+    <view class="product-card">
+      <image src="http://121.37.136.16:8080/travel-demo.png" class="product-image"></image>
+      <view class="product-info">
+        <text class="product-title">老友记3日游</text>
+        <text class="currency">¥</text>699
+      </view>
     </view>
-    <view class="hot">
-            <image src="http://121.37.136.16:8080/food-hot.png"></image>
+
+    <view class="product-card">
+      <image src="http://121.37.136.16:8080/travel-demo.png" class="product-image"></image>
+      <view class="product-info">
+        <text class="product-title">老友记3日游</text>
+        <text class="currency">¥</text>699
+      </view>
     </view>
-    <view class="hot">
-            <image src="http://121.37.136.16:8080/life-hot.png"></image>
+    <view class="product-card">
+      <image src="http://121.37.136.16:8080/travel-demo.png" class="product-image"></image>
+      <view class="product-info">
+        <text class="product-title">老友记3日游</text>
+        <text class="currency">¥</text>699
+      </view>
     </view>
-    <view class="hot">
-            <image src="http://121.37.136.16:8080/selection-hot.png"></image>
+    <view class="product-card">
+      <image src="http://121.37.136.16:8080/travel-demo.png" class="product-image"></image>
+      <view class="product-info">
+        <text class="product-title">老友记3日游</text>
+        <text class="currency">¥</text>699
+      </view>
     </view>
+  </view>
 </view>
